--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "typescript": "4.1.2",
     "url-loader": "4.1.1",
     "vue": "3.0.2",
-    "vue-jest": "5.0.0-alpha.5",
-    "vue-loader": "16.0.0-rc.1",
+    "vue-jest": "5.0.0-alpha.6",
+    "vue-loader": "16.0.0-rc.2",
     "vue-template-compiler": "2.6.12",
+    "vuedraggable": "4.0.0",
     "webpack": "5.6.0",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0",
